@@ -2,6 +2,7 @@
 Version: 1.1.0
 Date: ????
   Changes:
+    - Moved tin chromium alloy to smelter.
 ---------------------------------------------------------------------------------------------------
 Version: 1.9.9
 Date: 2020-11-29
